# schedule-generator

./: Pipfile  README.md  generate_schedule.py  pyproject.toml  schedule_app.py  semester_dates.json
